netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-port
  namespace: test-net
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: test-net
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
       matchLabels:
         project: test-net
    ports:
    - protocol: TCP
      port: 80
